ДЗ №13 доработка