@@ -6,6 +6,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
+import java.util.stream.Collectors;
 
 import ru.otus.appcontainer.api.AppComponent;
 import ru.otus.appcontainer.api.AppComponentsContainer;
@@ -25,6 +26,30 @@ public class AppComponentsContainerImpl implements AppComponentsContainer {
 
 	Map<Integer, List<Method>> methodsOrderMap = new TreeMap<>();
 	Map<Method, String> methodNameMap = new HashMap<>();
+	extractMetadataFromAppConfig(configClass, methodsOrderMap, methodNameMap);
+
+	createAppComponents(configClass, methodsOrderMap, methodNameMap);
+    }
+
+    private void checkConfigClass(Class<?> configClass) {
+	if (!configClass.isAnnotationPresent(AppComponentsContainerConfig.class)) {
+	    throw new IllegalArgumentException(String.format("Given class is not config %s", configClass.getName()));
+	}
+    }
+
+    @SuppressWarnings("unchecked")
+    @Override
+    public <C> C getAppComponent(Class<C> componentClass) {
+	return (C) searchAppComponentByClass(componentClass);
+    }
+
+    @Override
+    public <C> C getAppComponent(String componentName) {
+	return (C) appComponentsByName.get(componentName);
+    }
+
+    private void extractMetadataFromAppConfig(Class<?> configClass, Map<Integer, List<Method>> methodsOrderMap,
+	    Map<Method, String> methodNameMap) {
 	Method[] methods = configClass.getDeclaredMethods();
 	for (Method method : methods) {
 	    if (method.isAnnotationPresent(AppComponent.class)) {
@@ -43,33 +68,60 @@ public class AppComponentsContainerImpl implements AppComponentsContainer {
 		methodNameMap.put(method, name);
 	    }
 	}
+    }
 
-	Object obj = configClass.newInstance();
-	for (Integer order : methodsOrderMap.keySet()) {
-	    List<Method> methodsOfTheOrder = methodsOrderMap.get(order);
-	    for (Method methodOfTheOrder : methodsOfTheOrder) {
+    private void createAppComponents(Class<?> configClass, Map<Integer, List<Method>> methodsOrderMap,
+	    Map<Method, String> methodNameMap) {
+	try {
+	    Object obj = configClass.getConstructor().newInstance();
 
+	    for (Integer order : methodsOrderMap.keySet()) {
+		List<Method> methodsOfTheOrder = methodsOrderMap.get(order);
+		for (Method methodOfTheOrder : methodsOfTheOrder) {
+		    Object appComponent = createAppComponent(obj, methodOfTheOrder);
+		    appComponents.add(appComponent);
+		    appComponentsByName.put(methodNameMap.get(methodOfTheOrder), appComponent);
+		}
+	    }
+	} catch (Exception e) {
+	    throw new RuntimeException(e);
+	}
+    }
+
+    private Object createAppComponent(Object obj, Method method) throws ReflectiveOperationException {
+	if (method.getParameterCount() > 0) {
+	    Class<?>[] paramTypes = method.getParameterTypes();
+	    Object[] args = searchMethodArguments(paramTypes);
+	    return method.invoke(obj, args);
+	} else {
+	    return method.invoke(obj);
+	}
+    }
+
+    private Object[] searchMethodArguments(Class<?>[] paramTypes) {
+	List<Object> appropriateAppComponents = new ArrayList<>();
+
+	for (Class<?> paramType : paramTypes) {
+	    appropriateAppComponents.add(searchAppComponentByClass(paramType));
+	}
+
+	return appropriateAppComponents.toArray();
+    }
+
+    private Object searchAppComponentByClass(Class<?> componentClass) {
+	List<Object> componentsFound = appComponents.stream()
+		.filter(appComponent -> componentClass.isAssignableFrom(appComponent.getClass()))
+		.collect(Collectors.toList());
+	if (componentsFound.size() == 1) {
+	    return componentsFound.get(0);
+	} else {
+	    if (componentsFound.size() == 0) {
+		throw new RuntimeException("No component found by class " + componentClass.getCanonicalName());
+	    } else {
+		throw new RuntimeException(
+			"More than one component found by class " + componentClass.getCanonicalName());
 	    }
 	}
     }
 
-    private void checkConfigClass(Class<?> configClass) {
-	if (!configClass.isAnnotationPresent(AppComponentsContainerConfig.class)) {
-	    throw new IllegalArgumentException(String.format("Given class is not config %s", configClass.getName()));
-	}
-    }
-
-    @Override
-    public <C> C getAppComponent(Class<C> componentClass) {
-	return null;
-    }
-
-    @Override
-    public <C> C getAppComponent(String componentName) {
-	return null;
-    }
-
-    private int getMethodsSortedByOrder() {
-
-    }
 }
